--- a/css/introHCI.css
+++ b/css/introHCI.css
@@ -5,15 +5,23 @@
 
 /* applies to any <p> descendants of an element of class "example-class-selector" */
 .example-class-selector p {
-	/* Colors are in hexadecimal: http://www.colorpicker.com/ */	
+	/* Colors are in hexadecimal: http://www.colorpicker.com/ */
 	color: #CC00AA;
 }
 
 /* this style exists to make it obvious that you've successfully linked
    the CSS to the page. feel free to remove it once the link is working. */
 body {
-     border: 1px dotted gray;
+     border: 2px  dotted DarkCyan;
      padding: 20px;
+		 background-color: rgb(238,222,199);
+}
+.project {
+	margin-left: 5px;
+}
+
+.project p{
+font-variant: small-caps;
 }
 
 .jumbotron {
@@ -30,5 +38,5 @@ body {
      bottom: 0;
      right: 0;
      position: absolute;
-     z-index: -1;	
+     z-index: -1;
 }
